[package]
name = "easy-tracing"
version = "0.1.0-SNANPSHOT"
description = "A crate to easy use tracing"
license = "Apache-2.0"
authors = ["Ray <npcray@gmail.com>"]
repository = "https://github.com/NPCRay/easy-tracing.git"
keywords = ["tracing", "opentelemetry", "otel"]
readme = "README.md"
categories = ["config", "development-tools::debugging", "accessibility"]
edition = "2024"

[dependencies]
http = "1"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-http = { version = "0.30", default-features = false }
opentelemetry-otlp = { version = "0.30", default-features = true, features = ["grpc-tonic"] }
reqwest-middleware = { version = "0.4", default-features = false, features = ["multipart", "json", "rustls-tls"] }
async-trait = "0.1.88"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
anyhow = "1.0"
serde_json = { version = "1.0" }
chrono = { version = "0.4" }


[features]
tracing-reqwest = []
tracing-axum = []
tracing-consumer = []
tracing-scheduler = []
full = ["tracing-reqwest", "tracing-axum", "tracing-consumer", "tracing-scheduler"]
